--- a/Mood Food/Mood Food.csproj
+++ b/Mood Food/Mood Food.csproj
@@ -145,6 +145,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\InfoController.cs" />
     <Compile Include="DAL\MoodFoodContext.cs" />
     <Compile Include="DAL\MoodFoodInitializer.cs" />
     <Compile Include="Global.asax.cs">
@@ -176,6 +177,8 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+    <Content Include="Views\Info\Restauracja.cshtml" />
+    <Content Include="Views\Info\Kontakt.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
