--- a/Mood Food/Mood Food.csproj
+++ b/Mood Food/Mood Food.csproj
@@ -155,6 +155,10 @@
     <Compile Include="Migrations\201902151705583_InitialCreate.Designer.cs">
       <DependentUpon>201902151705583_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902201034201_AddedBoolShowProductsInCategory.cs" />
+    <Compile Include="Migrations\201902201034201_AddedBoolShowProductsInCategory.Designer.cs">
+      <DependentUpon>201902201034201_AddedBoolShowProductsInCategory.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Order.cs" />
@@ -192,6 +196,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902151705583_InitialCreate.resx">
       <DependentUpon>201902151705583_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902201034201_AddedBoolShowProductsInCategory.resx">
+      <DependentUpon>201902201034201_AddedBoolShowProductsInCategory.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
