--- a/Mood Food/Mood Food.csproj
+++ b/Mood Food/Mood Food.csproj
@@ -112,6 +112,14 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\banner.jpeg" />
+    <Content Include="Content\Images\Cheeseburger.jpeg" />
+    <Content Include="Content\Images\Hamburger.jpeg" />
+    <Content Include="Content\Images\Keczup.jpeg" />
+    <Content Include="Content\Images\Musztarda.jpeg" />
+    <Content Include="Content\Images\PizzaMargherita.jpeg" />
+    <Content Include="Content\Images\PizzaWiejska.jpeg" />
+    <Content Include="Content\Images\SalatkaMeksykanska.jpeg" />
+    <Content Include="Content\Images\SalatkaZKurczakiem.jpeg" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
@@ -136,6 +144,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\popper.js" />
     <Content Include="Scripts\popper.min.js" />
+    <Content Include="Scripts\slider.js" />
     <Content Include="Scripts\umd\popper-utils.js" />
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
@@ -147,6 +156,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InfoController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="DAL\MoodFoodContext.cs" />
     <Compile Include="DAL\MoodFoodInitializer.cs" />
     <Compile Include="Global.asax.cs">
@@ -193,6 +203,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Product\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902151705583_InitialCreate.resx">
