--- a/Mood Food/Web.config
+++ b/Mood Food/Web.config
@@ -13,6 +13,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ImagePath" value="/Content/Images/"/>
+    <add key="ProductsImagePath" value="/Content/Images/Products/"/>
+    <add key="CategoriesImagePath" value="/Content/Images/Categories/"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7" />
