--- a/Mood Food/packages.config
+++ b/Mood Food/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net47" />
   <package id="bootstrap" version="4.3.1" targetFramework="net47" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
+  <package id="Glimpse" version="1.8.2" targetFramework="net47" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net47" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net47" />
   <package id="jQuery" version="3.3.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net47" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net47" />
