Working on partial view - navigation in product view

--- a/Mood Food/Mood Food.csproj
+++ b/Mood Food/Mood Food.csproj
@@ -211,6 +211,7 @@
     <Content Include="Views\Info\Kontakt.cshtml" />
     <Content Include="Views\Product\Categories.cshtml" />
     <Content Include="Views\Product\Products.cshtml" />
+    <Content Include="Views\Shared\_CategoryNav.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
