--- a/Mood Food/packages.config
+++ b/Mood Food/packages.config
@@ -7,6 +7,7 @@
   <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net47" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net47" />
   <package id="jQuery" version="3.3.1" targetFramework="net47" />
+  <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net47" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net47" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net47" />
