--- a/Mood Food/Mood Food.csproj
+++ b/Mood Food/Mood Food.csproj
@@ -203,6 +203,12 @@
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InfoController.cs" />
+    <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Migrations\201903152113590_ChangedModelsDisplayNames.cs" />
+    <Compile Include="Migrations\201903152113590_ChangedModelsDisplayNames.Designer.cs">
+      <DependentUpon>201903152113590_ChangedModelsDisplayNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ViewModels\ManageCredentialsViewModel.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="DAL\MoodFoodContext.cs" />
     <Compile Include="DAL\MoodFoodInitializer.cs" />
@@ -268,6 +274,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Cart\Order.cshtml" />
     <Content Include="Views\Cart\OrderConfirmation.cshtml" />
+    <Content Include="Views\Manage\AllProducts.cshtml" />
+    <Content Include="Views\Manage\ProductEdit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -287,6 +295,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903112112493_AddedAspIdentity.resx">
       <DependentUpon>201903112112493_AddedAspIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903152113590_ChangedModelsDisplayNames.resx">
+      <DependentUpon>201903152113590_ChangedModelsDisplayNames.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
