--- a/Mood Food/Mood Food.csproj
+++ b/Mood Food/Mood Food.csproj
@@ -241,6 +241,7 @@
     <Compile Include="Models\ViewModels\CartProduct.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ViewModels\Cart.cs" />
+    <Compile Include="Models\ViewModels\EditProductViewModel.cs" />
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
     <Compile Include="Models\ViewModels\RegisterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
