Deleted unnecessary js files

--- a/Mood Food/Web.config
+++ b/Mood Food/Web.config
@@ -17,6 +17,18 @@
     <add key="ProductsImagePath" value="/Content/Images/Products/" />
     <add key="CategoriesImagePath" value="/Content/Images/Categories/" />
   </appSettings>
+
+  <system.net>
+    <mailSettings>
+      <smtp deliverymethod="specifiedpickupdirectory">
+        <specifiedpickupdirectory pickupdirectorylocation="c:\email"/>
+        <network host="localhost"/>
+      </smtp>
+    </mailSettings>
+
+  </system.net>
+
+
   <system.web>
     <compilation debug="true" targetFramework="4.7" />
     <httpRuntime targetFramework="4.7" />
