--- a/Mood Food/packages.config
+++ b/Mood Food/packages.config
@@ -26,5 +26,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="popper.js" version="1.14.0" targetFramework="net47" />
+  <package id="Postal.Mvc5" version="1.2.0" targetFramework="net47" />
+  <package id="RazorEngine" version="3.4.1" targetFramework="net47" />
   <package id="WebGrease" version="1.5.2" targetFramework="net47" />
 </packages>
